<resources>
    <string name="app_name">My Chat</string>
    <string name="_22_30">22:30</string>
    <string name="hi_leo">Hi Leo, Whats up ?? \nI need a new logo for group.</string>
    <string name="simple_minimal">Simple , minimal and beauti..</string>
    <string name="ok_i_ll_start">Ok, I\'ll start next week.\nSend me documents today.</string>
    <string name="oh_that_s_great">oh. That\'s great 😍</string>
    <string name="_22_33">22:33</string>
    <string name="_22_32">22:32</string>
    <string name="_22_31">22:31</string>
</resources>